--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="assets/owl-carousel/owl.theme.css">
-    <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400italic,700,700italic,300italic,300'
           rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/style.css">
     <title>GpiC visit card</title>
 </head>
 <body data-spy="scroll" data-target=".navbar">
@@ -83,39 +81,52 @@
     <section id="projects">
         <div class="in-area">
             <h2>Projects</h2>
-            <div id="owl-example" class="owl-carousel">
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>PHP</p>
+            <div class="slider">
+                <div class="slider__items">
+                    <div class="slider__items-wrap">
+                        <div class="projects-item">
+                            <img src="img/projects/magniti_1.jpg">
+                            <p>PHP</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>PrestaShop</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>jQuery</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>Web-development</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/projects/cs.jpg">
+                            <p>Game development<br/>
+                                Unity 3D</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>Video Montage</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>Logo development</p>
+                        </div>
+                        <div class="projects-item">
+                            <img src="img/">
+                            <p>Media design/animation - 2D characters</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>PrestaShop</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>jQuery</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>Web-development</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>Game development</p>
-                    <p>Unity 3D</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>Video Montage</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>Logo development</p>
-                </div>
-                <div class="projects-item">
-                    <img src="img/">
-                    <p>Media design/animation - 2D characters</p>
+
+                <div class="slider__navigation">
+                    <a href="#" class="slider__pager slider__pager_previous">
+                        <i class="fa fa-caret-square-o-left"></i>
+                    </a>
+                    <a href="#" class="slider__pager slider__pager_next">
+                        <i class="fa fa-caret-square-o-right"></i>
+                    </a>
                 </div>
             </div>
         </div>
@@ -127,12 +138,13 @@
             <div class="row">
                 <div class="col-xs-6 pull-left">
                     <h3>Feedback form</h3>
-                    <p>Name:</p>
-                    <input type="text" name="Name" />
-                    <p>E-mail:</p>
-                    <input type="email" name="Email" />
-                    <p>Please, describe your request:</p>
-                    <input type="text" name="Decription" />
+                    <div class="contact-form">
+                        <p>Name:</p>
+                        <input type="text" name="Name" />
+                        <p>E-mail:</p>
+                        <input type="email" name="Email" />
+                        <p>Please, describe your request:</p>
+                        <textarea name="Decription" cols="40" rows="3"></textarea>
                 </div>
                 <div class="col-xs-5 pull-right">
                     <p>E-Mail</p>
@@ -154,19 +166,12 @@
 
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
-<script src="assets/owl-carousel/owl.carousel.js"></script>
+<script src="js/slider.js"></script>
 
 <script>
-    $(document).ready(function() {
-        $("#owl-example").owlCarousel({
-            items: 4,
-            slideSpeed: 200,
-            stopOnHover: true,
-            navigation : true,
-            navigationText: ["<i class='fa fa-chevron-left'></i>", "<i class='fa fa-chevron-right'></i>"],
-            pagination: false,
-        });
+    new Slider('.slider', {
+        direction: 'horizontal',
+        currentSlide: 2
     });
 </script>
 
