--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -85,7 +85,7 @@
                 <div class="slider__items">
                     <div class="slider__items-wrap">
                         <div class="projects-item">
-                            <img src="img/projects/magniti_1.jpg">
+                            <img src="img/projects/1667215.png">
                             <p>PHP</p>
                         </div>
                         <div class="projects-item">
@@ -97,7 +97,7 @@
                             <p>jQuery</p>
                         </div>
                         <div class="projects-item">
-                            <img src="img/">
+                            <img src="img/projects/magniti_1.jpg">
                             <p>Web-development</p>
                         </div>
                         <div class="projects-item">
@@ -110,7 +110,7 @@
                             <p>Video Montage</p>
                         </div>
                         <div class="projects-item">
-                            <img src="img/">
+                            <img src="img/logo-bl.jpg">
                             <p>Logo development</p>
                         </div>
                         <div class="projects-item">
@@ -171,7 +171,8 @@
 <script>
     new Slider('.slider', {
         direction: 'horizontal',
-        currentSlide: 2
+        currentSlide: 2,
+        changeInterval: 1500
     });
 </script>
 
