--- a/GoIT/markup/exam/exam2/index.html
+++ b/GoIT/markup/exam/exam2/index.html
@@ -41,7 +41,9 @@
         <div class="in-area">
             <div class="row">
                 <h1>Implementing your ideas</h1>
+
                 <h2>High quality performance</h2>
+
                 <h3>On time delivery</h3>
                 <h4>After development support</h4>
             </div>
@@ -54,9 +56,10 @@
 
             <p>We are a small group of experienced Developers that provides a huge variety of services.<br/>
                 We specialize in PHP, Unity 3D, HTML, CSS, Javascript, jQuery, Bootstrap, Shopify and a whole host of
-                other technologies, platforms, and libraries. Whatever your needs are, we will find a solution that fits
-                it.<br/>
-                We've worked with clients of all sizes and industries, and we'd love the chance to work with you.
+                other technologies, platforms, and libraries.<br/>
+                We've worked with clients of all sizes and industries, and we'd love the chance to work with you.<br/>
+                Whatever your needs are, we will find a solution that fits
+                it.
             </p>
         </div>
     </section>
@@ -64,15 +67,18 @@
     <section id="team">
         <div class="in-area">
             <h2>Team</h2>
+
             <div class="team-person">
-                <img class="photo img-polaroid" src="" alt='photo'>                                  <!-- insert a photo-->
-                <h2>Edward Skrupskyi</h2>
+                <img class="photo img-polaroid" src="img/ImageGen.ashx.jpg" alt='photo'> <!-- insert a photo-->
+                <h2>Eduard Gurvic</h2>
+
                 <p>description</p>
             </div>
 
             <div class="team-person">
-                <img class="photo img-polaroid" src="" alt='photo'>                                  <!-- insert a photo-->
-                <h2>Andrew Shevchuk</h2>
+                <img class="photo img-polaroid" src="img/ImageGen.ashx.jpg" alt='photo'> <!-- insert a photo-->
+                <h2>Andrey Voronin</h2>
+
                 <p>description</p>
             </div>
         </div>
@@ -81,40 +87,49 @@
     <section id="projects">
         <div class="in-area">
             <h2>Projects</h2>
+
             <div class="slider">
                 <div class="slider__items">
                     <div class="slider__items-wrap">
                         <div class="projects-item">
                             <img src="img/projects/1667215.png">
+
                             <p>PHP</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/">
+
                             <p>PrestaShop</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/">
+
                             <p>jQuery</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/projects/magniti_1.jpg">
+
                             <p>Web-development</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/projects/cs.jpg">
+
                             <p>Game development<br/>
                                 Unity 3D</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/">
+
                             <p>Video Montage</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/logo-bl.jpg">
+
                             <p>Logo development</p>
                         </div>
                         <div class="projects-item">
                             <img src="img/">
+
                             <p>Media design/animation - 2D characters</p>
                         </div>
                     </div>
@@ -135,21 +150,33 @@
     <section id="contacts">
         <div class="in-area">
             <h2>Contacts</h2>
+
             <div class="row">
-                <div class="col-xs-6 pull-left">
+                <div class="col-xs-7 pull-left">
                     <h3>Feedback form</h3>
+
                     <div class="contact-form">
                         <p>Name:</p>
-                        <input type="text" name="Name" />
+                        <input type="text" name="Name"/>
+
                         <p>E-mail:</p>
-                        <input type="email" name="Email" />
+                        <input type="email" name="Email"/>
+
                         <p>Please, describe your request:</p>
                         <textarea name="Decription" cols="40" rows="3"></textarea>
+
+                        <p><input type="submit" value="Send">
+                            <input type="reset" value="Clear"></p>
+                    </div>
                 </div>
-                <div class="col-xs-5 pull-right">
-                    <p>E-Mail</p>
-                    <p>Viber</p>
-                    <p>Skype</p>
+                <div class="col-xs-5 pull-right contact-data">
+                    <h3>You can easily contact us via</h3>
+
+                    <p>E-Mail: <strong>g.pictures@gmail.com</strong></p>
+
+                    <p>Viber: <strong>+380633333333</strong></p>
+
+                    <p>Skype: <strong>g.pictures</strong></p>
                 </div>
             </div>
         </div>
@@ -171,7 +198,7 @@
 <script>
     new Slider('.slider', {
         direction: 'horizontal',
-        currentSlide: 2,
+        currentSlide: 1,
         changeInterval: 1500
     });
 </script>
