--- a/GoIT/markup/exam/exam3/index.html
+++ b/GoIT/markup/exam/exam3/index.html
@@ -31,6 +31,11 @@
 			<br>
 			reward
 		</div>
+
+        <footer>
+                <p>Copyright © 2016 <strong>Gunman</strong>.<br/>
+                    Designed by Nadiia Skrupska</p>
+        </footer>
     
     <script src="js/game.js"></script>
 	<script>
